syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cretus.retailbackend";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc createUser(CreateUserRequest) returns (CreateUserResponse);
  rpc authorizeUser(AuthorizeUserRequest) returns (AuthorizeUserResponse);
}

message  User {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string password = 5;
  string phone_number = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}


message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string phone_number = 5;
}


message CreateUserResponse {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message AuthorizeUserRequest {
  string email = 1;
  string password = 2;
}

message AuthorizeUserResponse {
  string access_key = 1;
}

message ErrorResponse {
  Errors error = 1;
  string message = 2;
}


enum Errors {
  USER_ALREADY_EXIST = 0;
  FIELD_VALIDATION_FAILED = 1;
  USER_DOES_NOT_EXIST = 3;
  INVALID_CREDENTIALS = 4;
  INTERNAL_SERVER_ERROR = 5;
}







